# pystrat

./: README.md  RELEASE.md  build_exe.py  main.py  pyproject.toml  release.ps1  release.py  stratagems.json  user_data.json
