[project]
name = "pystrat"
version = "1.1.5"
description = "Stratagem Pick for Helldivers 2 inspired by hellbuddy"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.2.0",
    "svglib>=1.6.0",
    "reportlab>=4.5.1",
]

[dependency-groups]
build = [
    "pyinstaller>=6.18.0",
]

[project.scripts]
build-exe = "build_exe:main"
release = "release:main"

[tool.setuptools]
py-modules = ["build_exe", "main", "release"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
